# pomodoro-overlay

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.for_bepy/: BEPY_TODOS.md  COMMENTS.md  DASHBOARD_REDESIGN_BRIEF.md
.for_bepy/ai_todos/: 01-ship-pomodoro-0.3.0.md  02-claude-usage-migrate-to-kit-v2.md  03-auto-pick-execution-and-branch-snippet.md  03-extract-overlay-visibility-module.md  03-real-logs-via-tauri-plugin-log.md  03-split-ipc-commands-dnd.md  04-dashboard-visual-qa.md  04-extract-lib-rs-tauri.md  04-phone-notifications-and-companion-pwa.md  04-remove-unused-expanded-param.md  04-split-kit-styles-css.md  05-remote-control-timer-from-phone.md  05-slim-rootdeps-after-system-extract.md  05-split-appjs-fullscreen-module.md  05-split-main-ts-modules.md  05-submodule-commit-skill.md  06-consolidate-time-formatters.md  06-dead-get-vapid-public-key-command.md  06-extract-theme-options-shared.md  06-split-mainrs-commands-module.md  06-tauri-kit-prettier-number-input.md  07-pie-sessions-visual-qa.md  07-share-navrow-helper.md  07-tauri-kit-tighter-field-spacing.md  08-drop-unused-lastchecked-about.md  08-tauri-kit-portable-keybinds-screen.md  09-pomodoro-dashboard-use-styleguide-components.md  12-remove-phone-pwa-push-companion.md
.github/workflows/: ci.yml  pages.yml  release.yml
.portfolio-data/: PORTFOLIO.md  metadata.json
docs/superpowers/plans/: 2026-04-29-return-to-corner.md  2026-05-04-dnd-focus.md  (+17 more)
pwa/: app.js  index.html  manifest.webmanifest  sw.js
src/: app.js  fullscreen.js  index.html  main.ts  settings.css  settings.html  settings.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hotkeys.rs  ipc.rs  lib.rs  main.rs  settings.rs  state.rs  stats.rs
src-tauri/src/ipc/: commands.rs  dnd.rs  stats.rs
src-tauri/src/push/: mod.rs  vapid.rs
src/settings/: main.ts  schema.ts
src/shared/: fullscreen.ts  sounds.ts  stats.ts
src/styles/: base.css  dashboard.css
(+55 files in other folders)
