[package]
name = "pomodoro-overlay"
version = "0.3.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2.3"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri_kit_settings = { path = "../vendor/tauri_kit/tauri/settings" }
tauri_kit_updater = { path = "../vendor/tauri_kit/tauri/updater" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }
raw-window-handle = "0.6"
windows = { version = "0.58", features = ["Media_Control", "Foundation_Collections"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
